<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user"
        android:orderInCategory="1"
        android:icon="@drawable/ic_account_circle_white_18dp"
        app:showAsAction="ifRoom"
        android:title="@string/user" />
    <item
        android:id="@+id/item1"
        android:title="@string/item_1"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item2"
        android:title="@string/item_2"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item3"
        android:title="@string/item_3"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>